# argument-names

./: .gitignore  README.md  identifier.py  pyproject.toml  requirements-tests.txt  requirements.txt
.github/workflows/: test.yml
argument_names/: __init__.py  __main__.py
tests/: test_argument_names.py
